--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -4,24 +4,40 @@
 	email = {{ .email }}
 
 [core]
+	pager = delta
 {{- if eq .chezmoi.os "darwin" }}
 	excludesfile = {{ .chezmoi.homeDir }}/.gitignore_global
 {{- end }}
 
+[interactive]
+	diffFilter = delta --color-only
+
+[delta]
+	navigate = true
+	side-by-side = true
+	line-numbers = true
+	syntax-theme = Catppuccin Mocha
+
+[merge]
+	conflictstyle = zdiff3
+
+[diff]
+	colorMoved = default
+
 [credential "https://github.com"]
 	helper = 
 {{- if eq .chezmoi.os "darwin" }}
-	helper = !/opt/homebrew/bin/gh auth git-credential
+	helper = !{{ .paths.darwin.gh }} auth git-credential
 {{- else }}
-	helper = !/usr/bin/gh auth git-credential
+	helper = !{{ .paths.linux.gh }} auth git-credential
 {{- end }}
 
 [credential "https://gist.github.com"]
 	helper = 
 {{- if eq .chezmoi.os "darwin" }}
-	helper = !/opt/homebrew/bin/gh auth git-credential
+	helper = !{{ .paths.darwin.gh }} auth git-credential
 {{- else }}
-	helper = !/usr/bin/gh auth git-credential
+	helper = !{{ .paths.linux.gh }} auth git-credential
 {{- end }}
 
 {{- if eq .chezmoi.os "darwin" }}
