--- a/home/dot_zshrc.tmpl
+++ b/home/dot_zshrc.tmpl
@@ -15,7 +15,7 @@ fi
 {{ template "path-common" . }}
 {{- if eq .chezmoi.os "darwin" }}
 export PATH="$HOME/.bun/bin:$PATH"
-{{- if eq .machine "personal-mac" }}
+{{- if eq .machineId "personal-mac" }}
 export PATH="$HOME/.antigravity/antigravity/bin:$PATH"
 {{- end }}
 {{- else }}
@@ -87,7 +87,7 @@ alias update-all="mise upgrade && mise reshim"
 alias code='/Applications/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code'
 {{- end }}
 
-{{- if eq .machine "personal-mac" }}
+{{- if eq .machineId "personal-mac" }}
 # Antigravity browser alias
 alias ag='open -a "Antigravity" --args --enable-gpu-rasterization --enable-zero-copy'
 
